--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -4,4 +4,11 @@
     <span class='letter'><%= letter.capitalize %></span>
   <% end %>
   <p>What is the longest word you can find?</p>
+  <form action='score' method='post' data-turbo='false'>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <div class='input-group'>
+      <input class='form-control form-control-lg' type='text' name='word'>
+      <button class='btn btn-secondary btn-large' type='submit'>Play</button>
+    </div>
+  </form>
 </div>
