--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,3 +30,8 @@ p {
   box-shadow: 1px 1px 3px gray;
   margin: 10px 10px 10px 0px;
 }
+
+.link {
+  font-size: x-large;
+  text-decoration: none;
+}
