--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,5 +1,6 @@
 <div class="container mt-3">
   <h1>Result</h1>
   <p><%= @result %></p>
+  <p>Current score: <%= @current_score %></p>
   <%= link_to 'Play again', new_path, class: 'link' %>
 </div>
